about, terms, privacy and delivery added
